<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_75f">CCU</string>
    <string name="app_daikin">Daikin</string>
    <string name="app_carrier">ClimaVision</string>
    <string name="app_airoverse">Airoverse for Facilities</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_ble">BLE</string>
    <string name="main_content">Main Content</string>
    <string name="ble_content">BLE</string>
    <string name="edit_icon">&#xf044;</string>
    <string name="delete_icon">&#xf1f8;</string>
    <string name="loading_dashboard">Loading dashboard...!</string>
    <string name="loading">Loading...</string>
    <string name="loading_zones">Loading Zones ...</string>
    <string name="no_device_currently_paired"> <![CDATA[
            <b>No device currently Paired</b><br>
            Please go to the Floor Layout on settings page to pair a new device
        ]]></string>
    <string name="humidity_text">Humidity: </string>
    <string name="temporary_hold">Temporary Hold: </string>
    <string name="yes_text">Yes</string>
    <string name="temporary_hold_auto">Temporary Hold(AUTO): </string>
    <string name="no_text">No</string>
    <string name="data_migration_pending">Data Migration Pending</string>
    <string name="data_migration_is_in_progress">Data Migration is in progress, please wait for some time</string>
    <string name="force_trim_will_erase_slots">Force trim will erase the following time slot(s) of  </string>
    <string name="zone_schedule_outside_building_occupancy">Zone Schedule is outside Building Occupancy</string>
    <string name="force_trim_and_save">Force-Trim &amp; Save</string>
    <string name="unknown_device">unknown device</string>
    <string name="usb">usb</string>
    <string name="title_activity_renatus_landing">RenatusLandingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test">Test</string>
    <string name="usb_devices_not_connected">USB device not connected</string>
    <string name="port_is_busy">Port is busy try after some time</string>
    <string name="alert_generated_at">\n Alert Generated at \t</string>
    <string name="alert_fixed_at">\n Alert Fixed at \t</string>
    <string name="ok_button">OK</string>
    <string name="mark_fixed">Mark-Fixed</string>
    <string name="ota_test_level_select_prompt">Select update level:</string>
    <string-array name="ota_test_level_select">
        <item>equip</item>
        <item>zone</item>
        <item>system</item>
        <item>site</item>
    </string-array>
    <string name="ble_not_supported">BLE Not Supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="gatt_connect_failed">Pairing Failed. Could not connect gatt.</string>
    <string name="sn_pairing_error">SmartNode/HelioNode/SmartStat Pairing could not be done. Please try again!</string>
    <string name="sn_bond_error">SmartNode/HelioNode/SmartStat is already Bonded. Please reset smartnode/helionode and unpair from bluetooth paired devices and try again.</string>
    <string name="ble_no_devices_found_warning">No devices found.  (Please have smart devices in advertisement mode and be within range)</string>
    <string name="scan_dialog_title">Scanning for 75F devices</string>
    <string name="unable_to_bluetooth">Unable to initialize bluetooth</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pick_ccu">Pick CCU</string>
    <string name="zone_schedule">Zone Schedule</string>
    <string name="unoccupied">UNOCCUPIED</string>
    <string name="add_time_slot">ADD TIMESLOT</string>
    <string name="available_devices">Available Devices</string>
    <string name="smart_device_advertisement_mode_not_finding_device">Please have smart devices in advertisement mode\nand be within range. \n\nNot finding the devices you looking for?</string>
    <string name="connect_manually">CONNECT MANUALLY</string>
    <string name="no_devices_found">No devices found</string>
    <string name="have_smart_device_in_advertisement_mode">Please have smart devices in advertisement \nmode and be within range.</string>
    <string name="want_to_pair_device_manually">Do you want to Pair to Device Manually?</string>
    <string name="connect">CONNECT</string>
    <string name="conventional_package_unit">Conventional Package Unit</string>
    <string name="conventional_package_unit_econ">CPU &amp; Economizer</string>
    <string name="two_pipe_fcu">2 Pipe FCU</string>
    <string name="four_pipe_fcu">4 Pipe FCU</string>
    <string name="conventional_pkg_unit_desc">Has simple independent stages for cooling and heating. The fan can be switched by user between Auto/Low/High</string>
    <string name="comm_pkg_unit_desc">Has simple independent stages for cooling and heating. User has ability to force stage 1 fan on all the time</string>
    <string name="commercial_package_unit">Commercial Package Unit</string>
    <string name="heat_pump_unit">Heat Pump Unit</string>
    <string name="heat_pump_desc">In heat pump operation, there is compressor that provides conditioning</string>
    <string name="_2_pipe_fancoil_unit">2 Pipe Fancoil Unit</string>
    <string name="fancoil_desc">A 2 pipe fan coil unit has 2 pipes for supplyig water through a coil</string>
    <string name="_4_fancoil_desc">A 4 pipe fan coil unit has 2 coils one for heating and another for cooling with 2 pipes each for supplying water</string>
    <string name="_4_pipe_fancoil_unit">4 Pipe Fancoil Unit</string>
    <string-array name="sse_action_type">
        <item> Cooling </item>
        <item> Heating </item>
        <item> Fan </item>
        <item> Not Installed </item>
    </string-array>
    <string-array name="lcm_relay">
        <item>  Normally Open </item>
        <item>  Normally Close </item>
    </string-array>
    <string-array name="lcm_analog_out">
        <item>  0-10v </item>
        <item>  2-10v </item>
    </string-array>
    <string-array name="lcm_analog_in">
        <item>  0-10A Current Transformer </item>
        <item>  0-20A Current Transformer </item>
        <item>  0-50A Current Transformer</item>
    </string-array>
    <string-array name="system_profile_select">
        <item>  Default System Profile</item>
        <item>  VAV Fully Modulating AHU </item>
        <item>  VAV Staged RTU with VFD Fan</item>
        <item>  VAV Advanced Hybrid AHU</item>
        <item>  VAV Advanced Hybrid AHU v2 </item>
        <item>  VAV External AHU Controller</item>

        <item>  DAB Fully Modulating AHU</item>
        <item>  DAB Staged RTU with VFD Fan</item>
        <item>  DAB Advanced Hybrid AHU</item>
        <item>  DAB Advanced Hybrid AHU v2 </item>
        <item>  DAB External AHU Controller</item>

    </string-array>
    <string-array name="system_profile_select_daikin">
        <item>  Default System Profile</item>
        <item>  VAV Fully Modulating AHU </item>
        <item>  VAV Staged RTU with VFD Fan</item>
        <item>  VAV Advanced Hybrid AHU</item>
        <item>  VAV External AHU Controller</item>
        
        <item>  DAB Fully Modulating AHU</item>
        <item>  DAB Staged RTU with VFD Fan</item>
        <item>  DAB Advanced Hybrid AHU</item>
        <item>  DAB External AHU Controller</item>
        <item>  Daikin IE RTU</item>
    </string-array>
    <string-array name="system_profile_select_carrier">
        <item>  Default System Profile</item>
        <item>  VAV Fully Modulating AHU </item>
        <item>  VAV Staged RTU with VFD Fan</item>
        <item>  VAV Advanced Hybrid AHU</item>
        <item>  VAV Advanced Hybrid AHU v2 </item>
        <item>  VAV External AHU Controller</item>
        
        <item>  VVT-C Fully Modulating AHU</item>
        <item>  VVT-C Staged RTU with VFD Fan</item>
        <item>  VVT-C Advanced Hybrid AHU</item>
        <item>  VVT-C Advanced Hybrid AHU v2</item>
        <item>  VVT-C External AHU Controller</item>
    </string-array>
    <string-array name="hvac_stage_selector">
        <item>  Cooling Stage 1 </item>
        <item>  Cooling Stage 2 </item>
        <item>  Cooling Stage 3 </item>
        <item>  Cooling Stage 4 </item>
        <item>  Cooling Stage 5 </item>
        <item>  Heating Stage 1 </item>
        <item>  Heating Stage 2 </item>
        <item>  Heating Stage 3 </item>
        <item>  Heating Stage 4 </item>
        <item>  Heating Stage 5 </item>
        <item>  Fan Stage 1 </item>
        <item>  Fan Stage 2 </item>
        <item>  Fan Stage 3 </item>
        <item>  Fan Stage 4 </item>
        <item>  Fan Stage 5 </item>
        <item>  Humidifier </item>
        <item>  Dehumidifier </item>
        <item>  Compressor Stage 1 </item>
        <item>  Compressor Stage 2 </item>
        <item>  Compressor Stage 3 </item>
        <item>  Compressor Stage 4 </item>
        <item>  Compressor Stage 5 </item>
        <item>  O - Energize in Cooling </item>
        <item>  B - Energize in Heating </item>
        <item>  Fan Enable </item>
        <item>  Occupied Enable</item>
        <item>  DCV Damper</item>

    </string-array>
    <string name="cooling_stage_1"> Cooling Stage 1 </string>
    <string name="cooling_stage_2"> Cooling Stage 2 </string>
    <string name="cooling_stage_3"> Cooling Stage 3 </string>
    <string name="heating_stage_1"> Heating Stage 1 </string>
    <string name="heating_stage_2"> Heating Stage 2 </string>
    <string name="heating_stage_3"> Heating Stage 3 </string>
    <string name="fan_low_speed"> Fan Low Speed </string>
    <string name="fan_medium_speed"> Fan Medium Speed </string>
    <string name="fan_high_speed"> Fan High Speed </string>
    <string name="fan_enabled"> Fan Enabled </string>
    <string name="occupied_enabled"> Occupied Enabled </string>
    <string name="humidifier"> Humidifier </string>
    <string name="dehumidifier"> DeHumidifier </string>
    <string name="aux_heating_stage_1">  Aux Heating stage1 </string>
    <string name="aux_heating_stage_2">  Aux Heating stage2 </string>
    <string name="exhaust_fan_stage_1">  Exhaust Fan Stage 1 </string>
    <string name="exhaust_fan_stage_2">  Exhaust Fan Stage 2 </string>
    <string name="water_valve">  Water Valve </string>
    <string name="compressor_speed">  Compressor Speed </string>
    <string name="title_building">Building</string>
    <string name="txt_tunersTitle">TUNERS</string>
    <string name="txt_tunersSearch">Search Tuners</string>
    <string name="txt_tunersSystem">System</string>
    <string name="txt_tunersZone">Zone</string>
    <string name="txt_tunersModule">Module</string>
    <string name="text_tunerChangeReason">*Reason for Change</string>
    <string name="tuner_save">Save</string>
    <string name="heating_user_limit_min">Heating User Limit Min</string>
    <string name="heating_user_limit_max">Heating User Limit Max</string>
    <string name="heating_userlimit_Title">Heating User Limit Scale</string>
    <string name="txt_zoneSearch">Search for Zones</string>
    <string name="txt_zoneName">Zone Name</string>
    <string name="title_alert_name">Alert Name</string>
    <string name="title_alert_severity">Severity</string>
    <string name="title_alert_status">Status</string>
    <string name="title_alert_message">Message</string>
    <string name="device_serial_no">Device Serial No.</string>
    <string name="vendor_product">Vendor | Product</string>
    <string name="protocol">Protocol</string>
    <string name="port">Port</string>
</resources>