<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/WindowTextStyle"
        android:id="@+id/default_text_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:text="place holder">
    </TextView>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <RadioGroup
            android:id="@+id/smartstatModules"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/conPackageUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="0.1"
                android:text="@string/conventional_package_unit"
                android:textSize="@dimen/text_medium_xlarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.1"
                android:text="@string/conventional_pkg_unit_desc"
                android:textSize="@dimen/text_small_xlarge" />

            <RadioButton
                android:id="@+id/commPackageUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_weight="0.1"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/commercial_package_unit"
                android:textColor="@color/selection_gray"
                android:textSize="@dimen/text_medium_xlarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.1"
                android:text="@string/comm_pkg_unit_desc"
                android:textSize="@dimen/text_small_xlarge" />

            <RadioButton
                android:id="@+id/hpu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_weight="0.1"
                android:checked="false"
                android:text="@string/heat_pump_unit"
                android:textSize="@dimen/text_medium_xlarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.1"
                android:text="@string/heat_pump_desc"
                android:textSize="@dimen/text_small_xlarge" />

            <RadioButton
                android:id="@+id/fancoil_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_weight="0.1"
                android:checked="false"
                android:text="@string/_2_pipe_fancoil_unit"
                android:textSize="@dimen/text_medium_xlarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.1"
                android:text="@string/fancoil_desc"
                android:textSize="@dimen/text_small_xlarge" />

            <RadioButton
                android:id="@+id/fancoil_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_weight="0.1"
                android:checked="false"
                android:text="@string/_4_pipe_fancoil_unit"
                android:textSize="@dimen/text_medium_xlarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_weight="0.1"
                android:text="@string/_4_fancoil_desc"
                android:textSize="@dimen/text_small_xlarge" />

            


        </RadioGroup>
    </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="right"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">

        <Button
            style="@style/buttonstyle"
            android:id="@+id/cancel_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Cancel"></Button>

        <Button
            style="@style/buttonstyle"
            android:id="@+id/pair_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Pair"></Button>

    </LinearLayout>
</LinearLayout>
