<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/zone_fragment_temp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RenatusLandingActivity">


    <TextView
        android:id="@+id/textTunersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="10sp"
        android:text="@string/txt_tunersTitle"
        android:textAppearance="@style/label_orange" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerSelection"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTunersLabel"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:overlapAnchor="false"
        android:spinnerMode="dropdown"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/radioGrpTuner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_toLeftOf="@+id/editTunerSearch"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:paddingRight="30sp">

        <RadioButton
            android:id="@+id/radioBtnBuilding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="true"
            android:enabled="true"
            android:text="@string/title_building"
            android:textAppearance="@style/label_values" />

        <RadioButton
            android:id="@+id/radioBtnSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/txt_tunersSystem"
            android:textAppearance="@style/label_values" />

        <RadioButton
            android:id="@+id/radioBtnZone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10sp"
            android:text="@string/txt_tunersZone"
            android:textAppearance="@style/label_values" />

        <RadioButton
            android:id="@+id/radioBtnModule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10sp"
            android:text="@string/txt_tunersModule"
            android:textAppearance="@style/label_values" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTunerSearch"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:drawableEnd="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:hint="@string/txt_tunersSearch"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="18sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerSelection">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTuner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textReasonLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recyclerTuner"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/text_tunerChangeReason"
                android:textAppearance="@style/tuner_text_group"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/editChangeReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textReasonLabel"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="20sp"
                android:layout_toLeftOf="@+id/buttonLayout"
                android:minHeight="50sp" />

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textReasonLabel"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCancel"
                    style="?tunerButton"
                    android:layout_width="100sp"
                    android:layout_height="50sp"
                    android:layout_marginRight="5sp"
                    android:padding="5sp"
                    android:text="@string/cancel"
                    android:textAppearance="?tunerButton"
                    app:strokeColor="?orange_75f" />

                <Button
                    android:id="@+id/buttonSave"
                    style="?tunerButton"
                    android:layout_width="100sp"
                    android:layout_height="50sp"
                    android:layout_marginLeft="5sp"
                    android:enabled="false"
                    android:padding="5sp"
                    android:text="@string/tuner_save"
                    android:textAppearance="?tunerButton"
                    app:strokeColor="?orange_75f" />


            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>