<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EEEEEE"
    android:paddingVertical="10dp"
    android:paddingStart="60dp"
    android:weightSum="20"
    tools:ignore="RtlSymmetry">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:text="@string/device_serial_no"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:singleLine="true"
        android:ellipsize="none"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="|"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/vendor_product"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="|"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/protocol"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="|"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:text="@string/port"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
