<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_limit_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RenatusLandingActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/title">

        <TextView
            android:id="@+id/textLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:textStyle="bold"
            android:text="@string/heating_userlimit_Title"
            android:textAppearance="@style/label_black" />

        <EditText
            android:id="@+id/editZoneSearch"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:drawableEnd="@drawable/ic_search"
            android:drawablePadding="5dp"
            android:hint="@string/txt_zoneSearch"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="18sp"
            android:importantForAutofill="no"
            tools:ignore="TextFields" />

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/icon_close"
            app:tint="?orange_75f"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/zone_fragment_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/title"
        android:background="@color/tuner_header_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:text="@string/txt_zoneName"
            android:textColor="@color/grey_select"/>

        <TextView
            android:id="@+id/minTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:text="@string/heating_user_limit_min"
            android:textColor="@color/grey_select"/>

        <TextView
           android:id="@+id/maxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:text="@string/heating_user_limit_max"
            android:textColor="@color/grey_select"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zone_fragment_temp"
        android:id="@+id/zonedata">


    </androidx.recyclerview.widget.RecyclerView>




</RelativeLayout>